# github-auto-commit

./: .gitignore  .timestamp  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  python-package.yml  release.yml  test.yml
Downloads/FarmConnectHub-React/: README.md
github_auto_commit/: __init__.py  cli.py  commands.py  stats.py
src/github_auto_commit/: __init__.py  __main__.py  auto_commit.py  cli.py  commands.py  config.py
tests/: test_config.py
