[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-auto-commit"
version = "1.0.2"
authors = [
    { name="Vasanth Adithya", email="vasanthfeb13@gmail.com" },
]
description = "A powerful command-line tool for automating GitHub contributions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "questionary>=1.10.0",
]

[project.urls]
"Homepage" = "https://github.com/vasanthfeb13/github-auto-commit"
"Bug Tracker" = "https://github.com/vasanthfeb13/github-auto-commit/issues"
"Documentation" = "https://github.com/vasanthfeb13/github-auto-commit#readme"

[project.scripts]
github-auto-commit = "github_auto_commit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=github_auto_commit"
testpaths = ["tests"]
