[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-auto-commit"
version = "1.1.0"
description = "A powerful tool for automating GitHub contributions with an interactive CLI"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "questionary>=1.10.0",
    "GitPython>=3.1.0",
    "schedule>=1.1.0",
    "pyfiglet>=0.8.0"
]

[project.urls]
"Homepage" = "https://github.com/vasanthfeb13/github-auto-commit"
"Bug Tracker" = "https://github.com/vasanthfeb13/github-auto-commit/issues"
"Documentation" = "https://github.com/vasanthfeb13/github-auto-commit#readme"

[project.scripts]
github-auto-commit = "github_auto_commit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/github_auto_commit"]

[tool.pytest.ini_options]
addopts = "--cov=github_auto_commit"
testpaths = ["tests"]
